--- a/frontend/src/styles/Footer.module.css
+++ b/frontend/src/styles/Footer.module.css
@@ -22,7 +22,12 @@
   gap: 1rem;
   padding: 0 1.5rem;
 }
-
+.contactLink{
+display: flex;
+  gap: 1rem;
+  align-items: center;
+  font-weight: 500;
+}
 .contactLink a {
   color: #434343;
   text-decoration: underline;
