--- a/frontend/src/styles/HeroSection.module.css
+++ b/frontend/src/styles/HeroSection.module.css
@@ -195,7 +195,7 @@ p {
   pointer-events: none;
 }
 
-.authBtn {
+/* .authBtn {
   padding: 1rem;
   border-radius: 12px;
   border: none;
@@ -218,7 +218,7 @@ p {
   font-size: 1rem;
   background: #fff;
   color: #333;
-}
+} */
 
 /* Responsive tweaks */
 @media (max-width: 600px) {
